--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -297,72 +297,115 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oSW-fy-VIZ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="52"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7gv-md-B4P">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="32"/>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" directionalLockEnabled="YES" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gv-md-B4P">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="52"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OIU-dY-TDX">
-                                                <rect key="frame" x="258" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="258" y="14" width="46" height="24"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="2mO-fS-2Yn"/>
                                                     <constraint firstAttribute="width" constant="46" id="E1L-lw-Kw7"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="51q-IX-HBr">
-                                                <rect key="frame" x="208" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="208" y="14" width="46" height="24"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="Xhv-0i-5pK"/>
                                                     <constraint firstAttribute="width" constant="46" id="uLn-4l-1Xj"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rte-cB-5en">
-                                                <rect key="frame" x="158" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="158" y="14" width="46" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="G4T-E9-ZLt"/>
+                                                    <constraint firstAttribute="height" constant="24" id="rll-K8-qnU"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XZ-p9-Oet">
-                                                <rect key="frame" x="108" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="108" y="14" width="46" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="7KC-Ct-KXP"/>
+                                                    <constraint firstAttribute="height" constant="24" id="mqx-Vr-FVH"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lkd-z6-Vhf">
-                                                <rect key="frame" x="54" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="54" y="14" width="46" height="24"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="4s6-F9-meb"/>
                                                     <constraint firstAttribute="width" constant="46" id="bYf-c2-4KQ"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNL-8y-zKB">
-                                                <rect key="frame" x="4" y="11" width="46" height="30"/>
+                                                <rect key="frame" x="4" y="14" width="46" height="24"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="IBt-Tu-uEy"/>
                                                     <constraint firstAttribute="width" constant="46" id="w15-nt-6ZO"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                         </subviews>
+                                        <color key="backgroundColor" red="1" green="0.39082779205617146" blue="0.29010333716053294" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstItem="OIU-dY-TDX" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="0SC-7q-4zx"/>
                                             <constraint firstItem="Lkd-z6-Vhf" firstAttribute="leading" secondItem="aNL-8y-zKB" secondAttribute="trailing" constant="4" id="2Ya-La-G2A"/>
+                                            <constraint firstItem="6XZ-p9-Oet" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="3W9-FM-yGT"/>
                                             <constraint firstItem="rte-cB-5en" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="4eb-Vv-X3u"/>
+                                            <constraint firstItem="6XZ-p9-Oet" firstAttribute="centerX" secondItem="7gv-md-B4P" secondAttribute="centerX" id="4h7-Qk-iTC"/>
                                             <constraint firstItem="51q-IX-HBr" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="5ar-Gv-M9X"/>
-                                            <constraint firstItem="OIU-dY-TDX" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="AB6-gN-BbY"/>
+                                            <constraint firstAttribute="trailing" secondItem="OIU-dY-TDX" secondAttribute="trailing" constant="296" id="8oF-k2-oQb"/>
+                                            <constraint firstAttribute="bottom" secondItem="OIU-dY-TDX" secondAttribute="bottom" constant="3" id="9SY-mv-8RZ"/>
+                                            <constraint firstItem="aNL-8y-zKB" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="9vh-iV-y0P"/>
+                                            <constraint firstAttribute="trailing" secondItem="OIU-dY-TDX" secondAttribute="trailing" constant="296" id="CaO-G5-SdH"/>
                                             <constraint firstItem="6XZ-p9-Oet" firstAttribute="leading" secondItem="Lkd-z6-Vhf" secondAttribute="trailing" constant="8" id="DcR-Sd-h5L"/>
                                             <constraint firstItem="rte-cB-5en" firstAttribute="leading" secondItem="6XZ-p9-Oet" secondAttribute="trailing" constant="4" id="KUu-2Y-d9P"/>
+                                            <constraint firstItem="OIU-dY-TDX" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="Lyk-od-WUU"/>
                                             <constraint firstItem="Lkd-z6-Vhf" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="M68-cW-w0E"/>
+                                            <constraint firstItem="51q-IX-HBr" firstAttribute="centerX" secondItem="7gv-md-B4P" secondAttribute="centerX" id="NW8-HH-aR4"/>
+                                            <constraint firstItem="Lkd-z6-Vhf" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="SFi-i8-Jgx"/>
                                             <constraint firstItem="51q-IX-HBr" firstAttribute="leading" secondItem="rte-cB-5en" secondAttribute="trailing" constant="4" id="U2K-Kc-Ytn"/>
                                             <constraint firstItem="aNL-8y-zKB" firstAttribute="leading" secondItem="7gv-md-B4P" secondAttribute="leading" constant="4" id="VXA-mj-qAw"/>
+                                            <constraint firstItem="rte-cB-5en" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="ZFi-jG-n3a"/>
                                             <constraint firstItem="6XZ-p9-Oet" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="ae9-c2-LQZ"/>
                                             <constraint firstItem="OIU-dY-TDX" firstAttribute="leading" secondItem="51q-IX-HBr" secondAttribute="trailing" constant="4" id="huY-BH-cOT"/>
-                                            <constraint firstItem="aNL-8y-zKB" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="lt8-nJ-pfd"/>
+                                            <constraint firstItem="51q-IX-HBr" firstAttribute="top" secondItem="7gv-md-B4P" secondAttribute="top" constant="3" id="isN-v9-PKi"/>
+                                            <constraint firstItem="rte-cB-5en" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="j9g-dY-j4c"/>
+                                            <constraint firstItem="6XZ-p9-Oet" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="kTt-hW-yXc"/>
+                                            <constraint firstItem="aNL-8y-zKB" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="oZj-as-uSp"/>
+                                            <constraint firstItem="rte-cB-5en" firstAttribute="centerX" secondItem="7gv-md-B4P" secondAttribute="centerX" id="pZv-d6-fB6"/>
+                                            <constraint firstItem="51q-IX-HBr" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="qpd-f3-hSh"/>
+                                            <constraint firstItem="OIU-dY-TDX" firstAttribute="baseline" secondItem="51q-IX-HBr" secondAttribute="baseline" id="z6I-tb-zea"/>
+                                            <constraint firstItem="Lkd-z6-Vhf" firstAttribute="centerY" secondItem="7gv-md-B4P" secondAttribute="centerY" id="zYP-0v-46l"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="9vh-iV-y0P"/>
+                                                <exclude reference="M68-cW-w0E"/>
+                                                <exclude reference="SFi-i8-Jgx"/>
+                                                <exclude reference="3W9-FM-yGT"/>
+                                                <exclude reference="4h7-Qk-iTC"/>
+                                                <exclude reference="ae9-c2-LQZ"/>
+                                                <exclude reference="4eb-Vv-X3u"/>
+                                                <exclude reference="ZFi-jG-n3a"/>
+                                                <exclude reference="pZv-d6-fB6"/>
+                                                <exclude reference="5ar-Gv-M9X"/>
+                                                <exclude reference="NW8-HH-aR4"/>
+                                                <exclude reference="isN-v9-PKi"/>
+                                                <exclude reference="0SC-7q-4zx"/>
+                                                <exclude reference="8oF-k2-oQb"/>
+                                                <exclude reference="CaO-G5-SdH"/>
+                                                <exclude reference="z6I-tb-zea"/>
+                                            </mask>
+                                        </variation>
                                     </scrollView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="7gv-md-B4P" secondAttribute="bottom" id="1iV-AI-rKS"/>
                                     <constraint firstAttribute="trailing" secondItem="7gv-md-B4P" secondAttribute="trailing" id="Gbd-jP-UEP"/>
+                                    <constraint firstAttribute="bottom" secondItem="7gv-md-B4P" secondAttribute="bottom" id="Ju3-iu-CUp"/>
                                     <constraint firstAttribute="height" constant="52" id="PgQ-7u-sXx"/>
                                     <constraint firstItem="7gv-md-B4P" firstAttribute="top" secondItem="oSW-fy-VIZ" secondAttribute="top" id="f49-pc-BrM"/>
                                     <constraint firstItem="7gv-md-B4P" firstAttribute="leading" secondItem="oSW-fy-VIZ" secondAttribute="leading" id="uSQ-cK-7Y8"/>
@@ -404,7 +447,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b2u-6j-Yxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2029" y="547"/>
+            <point key="canvasLocation" x="2135" y="561"/>
         </scene>
         <!--Zagrożenia-->
         <scene sceneID="LKy-Pm-iu8">
@@ -435,13 +478,13 @@
                                                         <constraint firstAttribute="height" constant="21" id="fUo-Ox-0Ja"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWi-8p-4Bf">
                                                     <rect key="frame" x="8" y="29" width="584" height="35"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
