--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -282,7 +282,7 @@
             </objects>
             <point key="canvasLocation" x="1890" y="-167"/>
         </scene>
-        <!--Baza wiedzy-->
+        <!--Opis monitorowanych substancji-->
         <scene sceneID="d9g-Se-Mrx">
             <objects>
                 <viewController id="zeU-zv-J4v" customClass="InformationVC" customModule="SmogApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -436,7 +436,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Baza wiedzy" id="hnB-R1-g24">
+                    <navigationItem key="navigationItem" title="Opis monitorowanych substancji" id="hnB-R1-g24">
                         <barButtonItem key="leftBarButtonItem" image="menu" id="Utj-ve-MXl"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
@@ -467,30 +467,32 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="72" sectionHeaderHeight="6" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="HE1-97-Ghm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="6" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="HE1-97-Ghm">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="alertCell" id="sBv-u7-Oqu" customClass="AlertTableViewCell" customModule="SmogApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="6" width="600" height="72"/>
+                                        <rect key="frame" x="0.0" y="6" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sBv-u7-Oqu" id="2Wp-Ry-yg5">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Miasto" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fbR-eR-fc2">
                                                     <rect key="frame" x="8" y="0.0" width="584" height="21"/>
+                                                    <color key="backgroundColor" red="0.37346329810000001" green="0.56417074550000001" blue="0.21993037200000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="fUo-Ox-0Ja"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWi-8p-4Bf">
-                                                    <rect key="frame" x="8" y="29" width="584" height="35"/>
+                                                    <rect key="frame" x="8" y="29" width="584" height="63"/>
+                                                    <color key="backgroundColor" red="0.97959807981927716" green="0.0020264527101651157" blue="0.050475404057464313" alpha="0.81842672413793105" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.912109375" green="0.912109375" blue="0.912109375" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -512,7 +514,7 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="1" green="0.13986433279999999" blue="0.091587552219999993" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.98097690879999999" green="1" blue="0.9827699392" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="cityLabel" destination="fbR-eR-fc2" id="NTr-4h-dhu"/>
                                             <outlet property="textlabel" destination="YWi-8p-4Bf" id="OKr-EH-hvS"/>
@@ -528,7 +530,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="HE1-97-Ghm" firstAttribute="bottom" secondItem="nhS-XL-3wj" secondAttribute="top" id="93V-Lz-crF"/>
-                            <constraint firstItem="HE1-97-Ghm" firstAttribute="top" secondItem="AQ3-vk-d9N" secondAttribute="bottom" id="E8E-lq-0eE"/>
+                            <constraint firstItem="HE1-97-Ghm" firstAttribute="top" secondItem="AQ3-vk-d9N" secondAttribute="bottom" constant="-65" id="E8E-lq-0eE"/>
                             <constraint firstAttribute="trailing" secondItem="HE1-97-Ghm" secondAttribute="trailing" id="T9I-Zt-FTO"/>
                             <constraint firstItem="HE1-97-Ghm" firstAttribute="leading" secondItem="OzI-E3-Vfq" secondAttribute="leading" id="qmV-rR-7aA"/>
                         </constraints>
@@ -544,7 +546,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZdT-uq-WqL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1992" y="1226"/>
+            <point key="canvasLocation" x="2804" y="1226"/>
         </scene>
         <!--Gallery-->
         <scene sceneID="agk-ze-B3a">
@@ -600,7 +602,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXU-uo-HqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1890" y="1874"/>
+            <point key="canvasLocation" x="2702" y="1874"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BmR-dY-m8C">
@@ -654,7 +656,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KRF-oy-fZg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1073" y="1182"/>
+            <point key="canvasLocation" x="1996" y="1226"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5P2-qn-T3s">
@@ -672,7 +674,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Lf-2m-Qpn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1078" y="1874"/>
+            <point key="canvasLocation" x="1890" y="1874"/>
         </scene>
         <!--Filtruj-->
         <scene sceneID="VFn-Mt-rak">
@@ -726,7 +728,7 @@
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="E9h-3h-Ki9"/>
+        <segue reference="vtg-sK-yZz"/>
         <segue reference="mlp-SM-4P5"/>
     </inferredMetricsTieBreakers>
 </document>
